--- a/src/sass/pages/_ux-page.scss
+++ b/src/sass/pages/_ux-page.scss
@@ -55,13 +55,13 @@
           height: auto;
           //min-height: 200px;
           cursor: pointer;
-          box-shadow: 0 0 10px black;
 
           .article__photo {
             @include img;
             width: 100%;
             height: auto;
             min-height: 200px;
+            border-radius: 5%;
           }
         }
 
@@ -70,7 +70,7 @@
           display: grid;
           grid-template-columns: repeat(5, 1fr);
           grid-template-rows: repeat(auto-fill, 1fr);
-          grid-gap: 20px;
+          //grid-gap: 20px;
           align-items: stretch;
           justify-items: stretch;
           height: 90%;
@@ -82,23 +82,23 @@
             overflow: hidden;
             display: grid;
             align-items: stretch;
-            background-color: black;
             height: 100%;
             width: 100%;
             min-height: auto;
-            padding: 0;
             margin: 0;
             border-radius: 5%;
 
             .article__photo {
+              //position: relative;
               @include img;
-              opacity: .8;
+              background-color: black;
+              border-radius: 5%;
+              //opacity: .8;
               transition: .3s;
               min-height: auto;
 
               &:hover {
                 opacity: 1;
-                transform: scale(1.2);
               }
             }
 
