--- a/src/sass/pages/_webs-page.scss
+++ b/src/sass/pages/_webs-page.scss
@@ -119,7 +119,7 @@
 
             .article__photo {
               @include img;
-              opacity: .8;
+              //opacity: .8;
               transition: .3s;
               min-height: auto;
 
