--- a/src/sass/sections2Page/_main2Page.scss
+++ b/src/sass/sections2Page/_main2Page.scss
@@ -111,18 +111,26 @@
         height: auto;
         min-height: 200px;
         cursor: pointer;
-        z-index: 1;
+        padding: 10px;
+        //z-index: 0;
 
         div.viewer__modal--active {
-          z-index: 99;
+          // z-index: 0;
         }
 
         .article__photo {
-          @include img;
           width: 100%;
           height: auto;
           min-height: 200px;
-          z-index: 0;
+          box-shadow: 0 0 10px black;
+          z-index: 1;
+          
+          .inner__picture {
+            @include img;
+            width: 100%;
+            height: 100%;
+            transition: .3s;
+          }
         }
       }
 
@@ -131,7 +139,7 @@
         display: block;
         height: 100%;
         width: 85%;
-        z-index: 0;
+        // z-index: 0;
 
         .pattern {}
       }
@@ -141,7 +149,7 @@
         display: grid;
         grid-template-columns: repeat(5, 1fr);
         grid-template-rows: repeat(auto-fill, 1fr);
-        grid-gap: 20px;
+        //grid-gap: 20px;
         align-items: stretch;
         justify-items: stretch;
         height: 90%;
@@ -160,22 +168,26 @@
           overflow: hidden;
           display: grid;
           align-items: stretch;
-          background-color: black;
           height: 100%;
           min-height: auto;
-          padding: 0;
           margin: 0;
-          box-shadow: 0 0 10px black;
 
           .article__photo {
-            @include img;
-            opacity: .8;
-            transition: .3s;
+            position: relative;
+            //@include img;
             min-height: auto;
-
+            overflow: hidden;
+            
+            .inner__picture {
+              opacity: .8;
+            }
+            
             &:hover {
-              opacity: 1;
-              transform: scale(1.2);
+              
+              .inner__picture {
+                opacity: 1;
+                transform: scale(1.2);                
+              }
             }
           }
 
